# libgstwebrtc

./: .gitmodules  CMakeLists.txt  build.bat  build.sh
dtls/: CMakeLists.txt
src/ext/webrtc/: gstwebrtcbin.c
src/gst-libs/gst/webrtc/: webrtc-enumtypes.c  webrtc-enumtypes.h
webrtc/: CMakeLists.txt
